Colaboratory를 통해 생성됨

--- a/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
+++ b/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
@@ -45,7 +45,7 @@
         "#!pip install requests"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
         "from bs4 import BeautifulSoup"
       ],
       "id": "Nc4yeyG0LknA",
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -70,26 +70,11 @@
       "source": [
         "def crawl(url):\n",
         "  data = requests.get(url)\n",
-        "  print(data)\n",
+        "  # print(data)\n",
         "  return data.content"
       ],
       "id": "6td_2_VtHlUi",
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "30dxHmEPog-b"
-      },
-      "source": [
-        "def parse(pageString):\n",
-        "  bsObj = BeautifulSoup(pageString, \"html.parser\")\n",
-        "  print(bsObj)\n",
-        "  return []\n"
-      ],
-      "id": "30dxHmEPog-b",
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -102,10 +87,93 @@
         "  url = \"https://finance.naver.com/sise/sise_market_sum.nhn?sosok={0}&page={1}\".format(sosok, page)\n",
         "  pageString = crawl(url)\n",
         "  list = parse(pageString)\n",
-        "  return list\n"
+        "  return list"
       ],
       "id": "1E1fnedWM45L",
-      "execution_count": 10,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bJqqCLat_BDX"
+      },
+      "source": [
+        "def parse(pageString):\n",
+        "  bsObj = BeautifulSoup(pageString, \"html.parser\")\n",
+        "  # print(bsObj)\n",
+        "  box_type_l = bsObj.find(\"div\", {\"class\":\"box_type_l\"})\n",
+        "  # print(box_type_l)\n",
+        "\n",
+        "  type_2 = box_type_l.find(\"table\", {\"class\":\"type_2\"})\n",
+        "  # print(type_2)\n",
+        "\n",
+        "  tbody = type_2.find(\"tbody\")\n",
+        "  # print(tbody)\n",
+        "\n",
+        "  trs = tbody.findAll(\"tr\")\n",
+        "  # print(len(trs))\n",
+        "\n",
+        "  tr = trs[1]\n",
+        "  stockInfo = getStockInfo(tr)\n",
+        "  print(\"\\nstockInfo:\",stockInfo)\n",
+        "  \n",
+        "  return []\n"
+      ],
+      "id": "bJqqCLat_BDX",
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hms04A5_D-hf"
+      },
+      "source": [
+        "def getStockInfo(tr):\n",
+        "  tds = tr.findAll(\"td\")\n",
+        "  print(tds)\n",
+        "\n",
+        "  # 순위\n",
+        "  rank = tds[0].text\n",
+        "  print(\"\\ntd:\", tds[0])\n",
+        "\n",
+        "  # a tag => href\n",
+        "  aTag = tds[1].find(\"a\")\n",
+        "  href = aTag[\"href\"]\n",
+        "  \n",
+        "  # name\n",
+        "  name = tds[1].text\n",
+        "\n",
+        "  # 현재가\n",
+        "  nowPrice = tds[2].text\n",
+        "\n",
+        "  # 전일대비 가격\n",
+        "\n",
+        "  # 시가총액\n",
+        "  totalPrice = tds[6].text\n",
+        "\n",
+        "  # 거래량\n",
+        "  volume = tds[9].text\n",
+        "\n",
+        "  return {\"rank\":rank, \"href\":href, \"code\":href[20:], \n",
+        "          \"name\":name, \"nowPrice\":nowPrice, \"totalPrice\":totalPrice,\n",
+        "          \"volume\":volume}"
+      ],
+      "id": "Hms04A5_D-hf",
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K8YK2k-a_Jl6"
+      },
+      "source": [
+        "list = getSiseMarketSum(1, 2)"
+      ],
+      "id": "K8YK2k-a_Jl6",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,15 +182,15 @@
         "id": "ig12wUayNou6"
       },
       "source": [
-        "result = []\n",
+        "# result = []\n",
         "\n",
-        "for i in range(1, 11): # 500 = 50 * 10\n",
-        "  list = getSiseMarketSum(0, i)\n",
-        "  if (list is not None) :\n",
-        "    print('i:', i)\n",
-        "    result += list\n",
+        "# for i in range(1, 11): # 500 = 50 * 10\n",
+        "#   list = getSiseMarketSum(0, i)\n",
+        "#   if (list is not None) :\n",
+        "#     print('i:', i)\n",
+        "#     result += list\n",
         "\n",
-        "print(result)"
+        "# print(result)"
       ],
       "id": "ig12wUayNou6",
       "execution_count": null,
@@ -134,10 +202,10 @@
         "id": "GSDgHE-iRl5a"
       },
       "source": [
-        ""
+        "  "
       ],
       "id": "GSDgHE-iRl5a",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ]
