Colaboratory를 통해 생성됨

--- a/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
+++ b/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
@@ -32,21 +32,9 @@
         "id": "WfgQSbgOoe-2"
       },
       "source": [
-        "모두를 위한 머신러닝에서 가져왔습니다."
+        "## 네이버에서 시가총액 상위 500개 crawling"
       ],
       "id": "WfgQSbgOoe-2"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RK3QTbWDofS7"
-      },
-      "source": [
-        "#!pip install requests"
-      ],
-      "id": "RK3QTbWDofS7",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -56,10 +44,11 @@
       "source": [
         "import pandas as pd\n",
         "import requests\n",
-        "from bs4 import BeautifulSoup"
+        "from bs4 import BeautifulSoup\n",
+        "import json"
       ],
       "id": "Nc4yeyG0LknA",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +63,7 @@
         "  return data.content"
       ],
       "id": "6td_2_VtHlUi",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +79,7 @@
         "  return list"
       ],
       "id": "1E1fnedWM45L",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,14 +103,20 @@
         "  trs = tbody.findAll(\"tr\")\n",
         "  # print(len(trs))\n",
         "\n",
-        "  tr = trs[1]\n",
-        "  stockInfo = getStockInfo(tr)\n",
-        "  print(\"\\nstockInfo:\",stockInfo)\n",
+        "  stockinfos = []\n",
+        "  for tr in trs:\n",
+        "    try:\n",
+        "      stockInfo = getStockInfo(tr)\n",
+        "      # print(\"\\nstockInfo:\\n\",stockInfo)\n",
+        "      stockinfos.append(stockInfo)\n",
+        "    except Exception as e:\n",
+        "        # print(e)\n",
+        "        pass\n",
         "  \n",
-        "  return []\n"
+        "  return stockinfos\n"
       ],
       "id": "bJqqCLat_BDX",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,11 +127,11 @@
       "source": [
         "def getStockInfo(tr):\n",
         "  tds = tr.findAll(\"td\")\n",
-        "  print(tds)\n",
+        "  # print(tds)\n",
         "\n",
         "  # 순위\n",
         "  rank = tds[0].text\n",
-        "  print(\"\\ntd:\", tds[0])\n",
+        "  # print(\"\\ntd:\", tds[0])\n",
         "\n",
         "  # a tag => href\n",
         "  aTag = tds[1].find(\"a\")\n",
@@ -161,7 +156,7 @@
         "          \"volume\":volume}"
       ],
       "id": "Hms04A5_D-hf",
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +165,7 @@
         "id": "K8YK2k-a_Jl6"
       },
       "source": [
-        "list = getSiseMarketSum(1, 2)"
+        "# list = getSiseMarketSum(1, 2)"
       ],
       "id": "K8YK2k-a_Jl6",
       "execution_count": null,
@@ -182,15 +177,23 @@
         "id": "ig12wUayNou6"
       },
       "source": [
-        "# result = []\n",
+        "domestic_stocks = {\"kospi\":0, \"kosdaq\":1}\n",
         "\n",
-        "# for i in range(1, 11): # 500 = 50 * 10\n",
-        "#   list = getSiseMarketSum(0, i)\n",
-        "#   if (list is not None) :\n",
-        "#     print('i:', i)\n",
-        "#     result += list\n",
+        "for key, value in domestic_stocks.items():\n",
+        "  result = []\n",
+        "  for i in range(1, 10 + 1): # 500 = 50 * 10\n",
+        "    list = getSiseMarketSum(int(value), i)\n",
+        "    result += list\n",
         "\n",
-        "# print(result)"
+        "  print(result)\n",
+        "  print(len(result))\n",
+        "\n",
+        "  # jshon 형식으로 파일에 저장\n",
+        "  # file_path = 'https://github.com/dantae74/machine-learning/tree/main/dataset/{}.json'.format(key)\n",
+        "  # file = open(file_path, \"w+\")\n",
+        "\n",
+        "  file = open(\"./{}.json\".format(key), \"w+\")\n",
+        "  file.write(json.dumps(result))\n"
       ],
       "id": "ig12wUayNou6",
       "execution_count": null,
@@ -199,14 +202,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GSDgHE-iRl5a"
+        "id": "GilkVOZL3SRg"
       },
       "source": [
-        "  "
+        ""
       ],
-      "id": "GSDgHE-iRl5a",
+      "id": "GilkVOZL3SRg",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o27lqfQh0xHy"
+      },
+      "source": [
+        ""
+      ],
+      "id": "o27lqfQh0xHy"
     }
   ]
 }
