--- a/stock-etc/02-get-naver-finace-stack-information.ipynb
+++ b/stock-etc/02-get-naver-finace-stack-information.ipynb
@@ -47,7 +47,7 @@
         "from bs4 import BeautifulSoup"
       ],
       "id": "4ToZiH1J_xw9",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "  return bsObj"
       ],
       "id": "KWC_EjBJ_xw9",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -79,7 +79,51 @@
         "  return blind_price.text"
       ],
       "id": "W2GzevwO_xw-",
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qm_BSL1SKj6A"
+      },
+      "source": [
+        "def getCandleData(company_code):\n",
+        "  bsObj = getBsObj(company_code)\n",
+        "  no_info = bsObj.find(\"table\", {\"class\":\"no_info\"})\n",
+        "  trs = no_info.findAll(\"tr\")\n",
+        "\n",
+        "  # tr[0] => 전일종가, 고가, 거래량\n",
+        "  # 전일종가 (close)\n",
+        "  tds = trs[0].findAll(\"td\")\n",
+        "  close = tds[0].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "\n",
+        "  # 고가 (high)\n",
+        "  high = tds[1].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "\n",
+        "  # 거래량 (volume)\n",
+        "  volume = tds[2].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "\n",
+        "\n",
+        "  # tr[1] => 시가, 저가, 거래대금\n",
+        "  # 시가 (nowPrice)\n",
+        "  tds = trs[1].findAll(\"td\")\n",
+        "  nowPrice = tds[0].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "\n",
+        "  # 저가 (low)\n",
+        "  low = tds[1].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "\n",
+        "  # 거래대금 (money)\n",
+        "  money = tds[2].find(\"span\", {\"class\":\"blind\"}).text\n",
+        "  \n",
+        "  # print(trs[1])\n",
+        "\n",
+        "  return {\"close\":close, \"high\":high, \n",
+        "          \"volume\":volume,\"nowPrice\":nowPrice, \n",
+        "          \"low\":low, \"money\":money}"
+      ],
+      "id": "Qm_BSL1SKj6A",
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -89,25 +133,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2qU10Jv3_xw-",
-        "outputId": "3c41e227-0d65-42ca-8b21-d5bf130cc68a"
+        "outputId": "43d6609f-52b3-4f61-c684-2e998a31ac78"
       },
       "source": [
         "company_codes = ['005930', '000660']\n",
         "\n",
-        "for company_code in company_codes:\n",
-        "  price = getPrice(company_code)\n",
-        "  print(price)"
+        "candleData = getCandleData(company_codes[1])\n",
+        "candleData\n",
+        "\n",
+        "\n",
+        "# for company_code in company_codes:\n",
+        "#   price = getPrice(company_code)\n",
+        "#   print(price)"
       ],
       "id": "2qU10Jv3_xw-",
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "80,100\n",
-            "125,000\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'close': '125,500',\n",
+              " 'high': '126,500',\n",
+              " 'low': '124,000',\n",
+              " 'money': '291,674',\n",
+              " 'nowPrice': '126,500',\n",
+              " 'volume': '2,326,559'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
         }
       ]
     },
@@ -120,7 +177,7 @@
         ""
       ],
       "id": "b9-mPD1Q_xw_",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,7 +189,7 @@
         ""
       ],
       "id": "VywTUgrU_xxA",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
