Colaboratory를 통해 생성됨

--- a/stock-etc/99-rnn-lotto.ipynb
+++ b/stock-etc/99-rnn-lotto.ipynb
@@ -48,10 +48,12 @@
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\n",
+        "from io import BytesIO\n",
+        "import requests"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,11 +62,76 @@
         "id": "30dxHmEPog-b"
       },
       "source": [
-        "url = 'https://raw.githubusercontent.com/dantae74/machine-learning/main/dataset/lotto.csv'\n",
-        "df = pd.read_csv(url)"
+        "noEnd ='965' # 마지막 로또 회차 번호\n",
+        "url = 'https://dhlottery.co.kr/gameResult.do?method=allWinExel&gubun=byWin&nowPage=&drwNoStart=1&drwNoEnd={}'.format(noEnd)\n",
+        "\n",
+        "# user-agent\n",
+        "user_agent = \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\""
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KJXYQXb83X65"
+      },
+      "source": [
+        "result = requests.get(url, headers={\"user-agent\":user_agent})"
+      ],
+      "id": "KJXYQXb83X65",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1d9_zPKE3hFX"
+      },
+      "source": [
+        "result"
+      ],
+      "id": "1d9_zPKE3hFX",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mb1d-diT3Y4W"
+      },
+      "source": [
+        "result.content"
+      ],
+      "id": "mb1d-diT3Y4W",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DHzsnDB25ntC"
+      },
+      "source": [
+        "f = BytesIO(result.content)\n",
+        "# df = pd.read_excel(f,sheet_name='excel',skiprows=3)\n",
+        "html_result = pd.read_html(f)"
+      ],
+      "id": "DHzsnDB25ntC",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bFfN-kn05xEL"
+      },
+      "source": [
+        "html_result"
+      ],
+      "id": "bFfN-kn05xEL",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,17 +144,13 @@
         "ncount = np.zeros((1,45), dtype=float)"
       ],
       "id": "LSXHeDP42wtO",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWoNnYBO3Oho",
-        "outputId": "bb840ccf-4bde-4070-f599-1be5f9d55213",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "EWoNnYBO3Oho"
       },
       "source": [
         "for i in range(df.shape[0]):\n",
@@ -103,25 +166,13 @@
         "print('x.shape:', X.shape)"
       ],
       "id": "EWoNnYBO3Oho",
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x.shape: (964, 45)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CdA_5B6E3rSO",
-        "outputId": "910e866f-4df5-4ea5-8375-1958c4a28cbe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CdA_5B6E3rSO"
       },
       "source": [
         "df_y = df[['1','2','3','4','5','6']]\n",
@@ -130,26 +181,13 @@
         "print('y.shape:', Y.shape)"
       ],
       "id": "CdA_5B6E3rSO",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x.shape: (964, 45)\n",
-            "y.shape: (964, 6)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nt6c46SK4I20",
-        "outputId": "41cbfb0b-0175-485f-bb6d-d1c9c1569be9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "nt6c46SK4I20"
       },
       "source": [
         "y_onehot = []\n",
@@ -161,21 +199,8 @@
         "np.array(y_onehot).shape"
       ],
       "id": "nt6c46SK4I20",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(2, 45)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -189,17 +214,13 @@
         "  return onehot"
       ],
       "id": "x99k7B8K4Wm2",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wbjZZp9n4xXU",
-        "outputId": "21476c23-31c8-451f-8428-52306a556d53",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wbjZZp9n4xXU"
       },
       "source": [
         "y_onehot = []\n",
@@ -212,45 +233,20 @@
         "print('y_onehot.shape:', y_onehot.shape)"
       ],
       "id": "wbjZZp9n4xXU",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "y_onehot.shape: (964, 6, 45)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UkCXeNmG5Bh7",
-        "outputId": "bb5cb929-868c-4f44-ef47-f30456b8466c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "UkCXeNmG5Bh7"
       },
       "source": [
         "X.shape"
       ],
       "id": "UkCXeNmG5Bh7",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(964, 45)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -269,7 +265,7 @@
         "    return np.array(dataX), np.array(dataY)"
       ],
       "id": "F8pF1y105Hvw",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,43 +277,26 @@
         "x_data, y_data = build_dataset(X, y_onehot, 6)"
       ],
       "id": "sg308S475TZC",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Zo2LbxT5Zca",
-        "outputId": "f2d91cc9-2ec6-4a35-e03e-ae2f9cdfe825",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "0Zo2LbxT5Zca"
       },
       "source": [
         "print('x_data.shape:', x_data.shape)\n",
         "print('y_data.shape:', y_data.shape)"
       ],
       "id": "0Zo2LbxT5Zca",
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_data.shape: (958, 6, 45)\n",
-            "y_data.shape: (958, 6, 45)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MhvjS9lW5hWe",
-        "outputId": "f35767b9-2c82-4a09-f136-3f9f88889df9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "MhvjS9lW5hWe"
       },
       "source": [
         "model = keras.Sequential();\n",
@@ -328,67 +307,25 @@
         "model.summary()"
       ],
       "id": "MhvjS9lW5hWe",
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential\"\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "lstm (LSTM)                  (None, 6, 45)             16380     \n",
-            "_________________________________________________________________\n",
-            "lstm_1 (LSTM)                (None, 6, 45)             16380     \n",
-            "_________________________________________________________________\n",
-            "dense (Dense)                (None, 6, 45)             2070      \n",
-            "=================================================================\n",
-            "Total params: 34,830\n",
-            "Trainable params: 34,830\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5zwpxMxG5x-M",
-        "outputId": "6a20f2b8-cf42-48cd-f47c-3cf069a7b000",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "5zwpxMxG5x-M"
       },
       "source": [
         "model.fit(x_data, y_data, epochs=1200, verbose=0)"
       ],
       "id": "5zwpxMxG5x-M",
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7feba030d8d0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2WqLIgJi53cj",
-        "outputId": "4925034b-6791-4f58-f2bc-8a47b29892ea",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2WqLIgJi53cj"
       },
       "source": [
         "x_test = x_data[-1,:]\n",
@@ -398,16 +335,8 @@
         "print('x_test.shape:', x_test.shape)"
       ],
       "id": "2WqLIgJi53cj",
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_test.shape: (1, 6, 45)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -418,7 +347,7 @@
         "pred_y = model.predict(x_test)"
       ],
       "id": "QMuWb7Pl6Hku",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
