Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -48,7 +48,7 @@
         "import pandas as pd"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "  # print(crtfc_key)"
       ],
       "id": "Q71ALk2klOwe",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "now = datetime.today().strftime('%Y%m%d')"
       ],
       "id": "rYaAHzkRpAnn",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "corp_code = '005930' # 삼성전자"
       ],
       "id": "kJP0yw1eoMS4",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,14 @@
       },
       "source": [
         "def make_api_url(corp_code, bgn_de='19990101', end_de=now, pblntf_ty='A', pblntf_detail_ty=['A001','A002','A003'], page_count='100'):\n",
-        "  url = \"https://opendart.fss.or.kr/api/list.json?crtfc_key={$corp_code}&"
+        "  url = \"https://opendart.fss.or.kr/api/list.json?\\\n",
+        "                                                  crtfc_key={corp_code}\\\n",
+        "                                                  &corp_code={corp_code}\\\n",
+        "                                                  &bgn_de={bgn_de}\\\n",
+        "                                                  &end_de={end_de}\\\n",
+        "                                                  &pblntf_ty={pblntf_ty}\\\n",
+        "                                                  &pblntf_detail_ty={pblntf_detail_ty}\\\n",
+        "                                                  &page_count={page_count}\""
       ],
       "id": "C7Z9U4U-nfZI",
       "execution_count": null,
@@ -107,26 +114,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z_9TqeqxnfO6"
+        "id": "z_9TqeqxnfO6",
+        "outputId": "4ed373b2-bae5-4425-f3f6-5a59ee54ff41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        }
       },
       "source": [
-        ""
+        "test = \"\"\n",
+        "[test += i, for i in ['hello', 'bye']]\n",
+        "test\n"
       ],
       "id": "z_9TqeqxnfO6",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-550c58a53cd7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    [test += i, for i in ['hello', 'bye']]\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1yObfsTnnfDp"
+        "id": "1yObfsTnnfDp",
+        "outputId": "55dc675e-c9f7-44b2-ccb3-219aa3f35493",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        ""
+        "test"
       ],
       "id": "1yObfsTnnfDp",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'hellobye'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XkvWDIcB1fE4",
+        "outputId": "c0f3f023-ae55-4f6c-e62f-44a1e05acbd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "a"
+      ],
+      "id": "XkvWDIcB1fE4",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'aaaabbbb'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -211,16 +288,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "sDaVssyuTmbw",
-        "outputId": "734a8040-d3e2-43d2-a307-c572ccb39824",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "734a8040-d3e2-43d2-a307-c572ccb39824"
       },
       "source": [
         ""
       ],
       "id": "sDaVssyuTmbw",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,16 +316,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "9iEuoiuAYSM0",
-        "outputId": "bec1b235-8ccc-4ee9-ac57-73a385257d64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bec1b235-8ccc-4ee9-ac57-73a385257d64"
       },
       "source": [
         "ls -al sample_data/"
       ],
       "id": "9iEuoiuAYSM0",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,23 +354,23 @@
         "    f.writelines(\"94f6f704a87d5868d411db6c48a4bc01194d4bd2\")"
       ],
       "id": "4La8mTPbihCu",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-gvnZtnajYyd",
-        "outputId": "4ac84a80-ff89-4558-8f5f-80e445b6a181",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ac84a80-ff89-4558-8f5f-80e445b6a181"
       },
       "source": [
         "ls -al sample_data/"
       ],
       "id": "-gvnZtnajYyd",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,10 +394,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Wdu1dQlkja1s",
-        "outputId": "a70f7d12-e703-448a-f6c4-6e600280b96e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a70f7d12-e703-448a-f6c4-6e600280b96e"
       },
       "source": [
         "with open('./sample_data/my_data.txt', 'r') as reader:\n",
@@ -329,7 +406,7 @@
         "  print(crte_data)"
       ],
       "id": "Wdu1dQlkja1s",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,16 +421,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "C2b8yTVrkeC1",
-        "outputId": "c414b5ee-5d4c-439a-e711-ceb4e9066d28",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c414b5ee-5d4c-439a-e711-ceb4e9066d28"
       },
       "source": [
         "!cat ./sample_data/my_data.txt"
       ],
       "id": "C2b8yTVrkeC1",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
