Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -105,7 +105,13 @@
         "                                                  &end_de={end_de}\\\n",
         "                                                  &pblntf_ty={pblntf_ty}\\\n",
         "                                                  &pblntf_detail_ty={pblntf_detail_ty}\\\n",
-        "                                                  &page_count={page_count}\""
+        "                                                  &page_count={page_count}\".format(crtfc_key=crtfc_key,\\\n",
+        "                                                                                   corp_code=corp_code,\\\n",
+        "                                                                                   bgn_de=bgn_de,\\\n",
+        "                                                                                   end_de=end_de,\\\n",
+        "                                                                                   pblntf_ty=pblntf_ty,\\\n",
+        "                                                                                   pblntf_detail_ty=pblntf_detail_ty,\\\n",
+        "                                                                                   page_count=page_count)"
       ],
       "id": "C7Z9U4U-nfZI",
       "execution_count": null,
@@ -114,12 +120,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dwpg9npiMwr1"
+      },
+      "source": [
+        ""
+      ],
+      "id": "dwpg9npiMwr1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "z_9TqeqxnfO6",
-        "outputId": "4ed373b2-bae5-4425-f3f6-5a59ee54ff41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
-        }
+        },
+        "outputId": "4ed373b2-bae5-4425-f3f6-5a59ee54ff41"
       },
       "source": [
         "test = \"\"\n",
@@ -127,7 +145,7 @@
         "test\n"
       ],
       "id": "z_9TqeqxnfO6",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -143,17 +161,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "1yObfsTnnfDp",
-        "outputId": "55dc675e-c9f7-44b2-ccb3-219aa3f35493",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "55dc675e-c9f7-44b2-ccb3-219aa3f35493"
       },
       "source": [
         "test"
       ],
       "id": "1yObfsTnnfDp",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,17 +194,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "XkvWDIcB1fE4",
-        "outputId": "c0f3f023-ae55-4f6c-e62f-44a1e05acbd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "c0f3f023-ae55-4f6c-e62f-44a1e05acbd0"
       },
       "source": [
         "a"
       ],
       "id": "XkvWDIcB1fE4",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
